# rust-tutorial

./: .env  Cargo.toml  README.md
config/: default.toml
src/: configuratioin.rs  configuration.rs  error.rs  lib.rs  main.rs
src/db/: mod.rs
src/models/: user.rs
src/repositories/: user_repository.rs
src/services/: mod.rs  user_service.rs
